tests/bad_programs/type_errors/redecl_different_types.notc
int main() {
    int n;
    double n;
    return 0;
}
